2022-09-15T02:43:35Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3057437316
* notice: last 14d: unq all: 10 34
* notice: prev accum: outdated-unq outdated-all / unq all: 307 484 / 332 520
* notice: next accum: outdated-unq outdated-all / unq all: 309 486 / 332 520
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-31] / []

2022-09-14T16:35:53Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3054498337
* notice: last 14d: unq all: 11 36
* notice: prev accum: outdated-unq outdated-all / unq all: 307 484 / 332 519
* notice: next accum: outdated-unq outdated-all / unq all: 307 484 / 332 520
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-09-14]

2022-09-14T08:31:22Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3051299824
* notice: last 14d: unq all: 11 35
* notice: prev accum: outdated-unq outdated-all / unq all: 307 484 / 330 517
* notice: next accum: outdated-unq outdated-all / unq all: 307 484 / 332 519
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-14]

2022-09-14T02:34:14Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049755166
* notice: last 14d: unq all: 11 33
* notice: prev accum: outdated-unq outdated-all / unq all: 306 483 / 330 517
* notice: next accum: outdated-unq outdated-all / unq all: 307 484 / 330 517
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-30] / []

2022-09-13T16:34:17Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3046795513