@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-15T02:43:35Z",
+  "timestamp" : "2022-09-15T08:34:21Z",
   "count_outdated" : 486,
   "uniques_outdated" : 309,
-  "count" : 520,
-  "uniques" : 332,
+  "count" : 521,
+  "uniques" : 334,
   "clones" : [
     {
       "timestamp": "2022-09-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -72,6 +72,13 @@
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 3,
       "count_minmax": [ 2, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-09-15T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
