@@ -1,10 +1,10 @@
 {
-  "count": 34,
+  "count": 35,
   "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-09-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-09-14T00:00:00Z",
       "count": 3,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2022-09-15T00:00:00Z",
+      "count": 2,
       "uniques": 2
     }
   ]
