@@ -1,3 +1,11 @@
+2022-09-15T08:34:21Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3058962759
+* notice: last 14d: unq all: 10 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 309 486 / 332 520
+* notice: next accum: outdated-unq outdated-all / unq all: 309 486 / 334 521
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-01 2022-09-15]
+
 2022-09-15T02:43:35Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3057437316
 * notice: last 14d: unq all: 10 34
